--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -4,7 +4,7 @@ on: [push, pull_request]
 
 env:
   CARGO_TERM_COLOR: always
-
+  RUSTFLAGS: "-C link-arg=-fuse-ld=mold"
 jobs:
   test:
     name: Test
