Implemented a health check endpoint, a test folder, a server setup helper, and required dependencies in Cargo.toml and flake.nix

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,19 @@
 [package]
 name = "newsletter-website"
 version = "0.1.0"
+authors = ["Axel Sorenson <AxelPSorenson@gmail.com>"]
 edition = "2021"
 
+[lib]
+path = "src/lib.rs"
+
+[[bin]]
+path = "src/main.rs"
+name = "newsletter-website"
+
+[dev-dependencies]
+reqwest = "0.12" 
+
 [dependencies]
+actix-web = "4"
+tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
