--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,9 @@ name = "newsletter-website"
 
 [dev-dependencies]
 reqwest = "0.12" 
+test-case = "3.3.1"
 
 [dependencies]
 actix-web = "4"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
+serde = { version = "1", features = ["derive"] }
